fix searchinput too wide on mobile

--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -1,7 +1,7 @@
 @import '../../designUtils/colors';
 
 .searchBar {
-    width: 93%;
+    width: -webkit-fill-available;
     height: 30px;
     border: none;
     padding: 5px 10px;
